opam-version: "2.0"
maintainer: "dev@ocsigen.org"
name: "wikidoc"
version: "dev"
author: "dev@ocsigen.org"
synopsis: "Convert OCaml documentation to wiki"
homepage: "https://github.com/ocsigen/wikidoc"
bug-reports: "https://github.com/ocsigen/wikidoc/issues"
dev-repo: "git+https://github.com/ocsigen/wikidoc.git"
build: [
  [ make "BINDIR=%{bin}%" ]
]
install: [
  [ make "BINDIR=%{bin}%" "install" ]
]
remove: [
  [ "ocamlfind" "remove" "wikidoc" ]
  [ "rm" "-f" "%{bin}%/latex_of_wiki" ]
]
depends: [
  "ocaml" {= "4.13.0"}
  "base-threads"
  "base-unix"
  "ocamlfind"
  "lwt"
  "pcre"
]
